<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity"
              android:orientation="vertical"
              android:background="@color/lightGreen">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">
        <EditText
                android:id="@+id/edit_text"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                android:hint="@string/edit_text_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="160dp">
            <CheckBox
                android:id="@+id/check_box_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_bold_string"
                android:textSize="18sp"
                android:layout_marginStart="10dp" />
            <CheckBox
                android:id="@+id/check_box_italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_italic_string"
                android:textSize="18sp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">
                <RadioButton
                    android:id="@+id/radio_button_manuale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button_one_string"
                    android:textSize="18sp" />
                <RadioButton
                    android:id="@+id/radio_button_indie_flower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button_two_string"
                    android:textSize="18sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:max="60" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="150dp">
        <ToggleButton
            android:id="@+id/toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="150dp"
            android:textColor="@color/white"
            android:background="@color/red" />
        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/exit_button_string"
            android:textColor="@color/white"
            android:background="@color/red" />
    </LinearLayout>
    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_view_string"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp" />
</LinearLayout>